# fast-ai-detector

./: .gitignore  README.md  pyproject.toml
scripts/: build_neuronpedia_feature_lookup.py  build_raid_percentile_artifacts.py  build_unsupervised_sae_analysis_bundle.py  build_unsupervised_sae_vector_analysis_bundle.py  package_neuronpedia_feature_lookup_asset.py  score_raid_csv_to_predictions_json.py  verify_unsupervised_sae_analysis_bundle.py  verify_unsupervised_sae_vector_analysis_bundle.py
src/fast_ai_detector/: cli.py  feature_lookup.py  inference.py  models.py  percentiles.py  sae_analysis.py
src/fast_ai_detector/assets/: manifest.json
src/fast_ai_detector/assets/feature_lookup/: layer_17_width_16k_l0_medium_neuronpedia_lookup_v1.json
src/fast_ai_detector/assets/models/: raid_unsupervised_delta_v1.npz
src/fast_ai_detector/assets/percentiles/: raid-finetune_raid_val_balanced_percentiles_v1.json  raid-finetune_raid_val_balanced_percentiles_v1.npz  unsupervised_raid_val_balanced_percentiles_v1.json  unsupervised_raid_val_balanced_percentiles_v1.npz
