[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-ai-detector"
version = "0.1.0"
description = "Fast local AI-text detection with a bundled unsupervised contrast model and RAID finetune."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "huggingface_hub",
  "numpy",
  "pandas",
  "torch",
  "transformers",
  "sentencepiece",
]

[project.scripts]
fast-ai-detector = "fast_ai_detector.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fast_ai_detector = [
  "assets/manifest.json",
  "assets/models/*.npz",
  "assets/percentiles/*.npz",
  "assets/percentiles/*.json",
  "assets/tokenizer/*",
]
